--- a/samples/index.html
+++ b/samples/index.html
@@ -5,6 +5,19 @@
 <head>
     <title>Sample 1</title>
     <meta charset="utf-8" />
+    <style>
+        html,
+        body {
+            margin: 0px;
+            padding: 0px;
+        }
+
+        video {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
